--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			
 			<div class="conceito">
 				
-				Resíduos sólidos (podem ser tanto sólidos como semissólidos) nada mais são do que materiais descartados que chegaram ao fim da sua vida útil. Esses resíduos podem ser divididos 
-O que temos em mente em relação a resíduos sólidos, ou comumente chamado de lixo, são materiais que descartamos no nosso dia a dia e que são levados pelo caminhão de lixo. Além de haver resíduos residenciais, possui-se classificações de origem destes resíduos. Esses são: resíduos industriais, construção civil, serviços de saúde entre outros. 
-Esses produtos descartados, são classificados e tratados dependendo da sua classificação. Esses resíduos são classificados em: perigosos e não perigosos.
+				Resíduos sólidos (podem ser tanto sólidos como semissólidos) nada mais são do que materiais descartados que chegaram ao fim da sua vida útil. Esses resíduos podem ser divididos em resíduos orgânicos e resíduos inorgânicos.
+				Resíduos inorgânicos: não sofrem biodegradação.Resíduos orgânicos com dificilmente biodegradáveis: degradação por via biológica é quase nula ou desprezível. 
+                                O que temos em mente em relação a resíduos sólidos, ou comumente chamado de lixo, são materiais que descartamos no nosso dia a dia e que são levados pelo caminhão de lixo. Além de haver resíduos residenciais, possui-se classificações de origem destes resíduos. Esses são: resíduos industriais, construção civil, serviços de saúde entre outros.
 			
 			</div>
 
