--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<meta charset="utf-8">
 			<link rel="stylesheet" href="styles.css">
 			<link rel="stylesheet" href="script.js">
-			<link rel="icon" href="icone.ico">
+			<link rel="icon" href="icon.ico">
 			<title>TDAR - Resíduos Sólidos </title>
 	                
 		</head>
