--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			
 			</div>
 
+			<img src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg"></img>
+
 		</body>
 	
 	</html>
