--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			
 			</div>
 
-			<img src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg"></img>
+			<img src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg" height="300" width="300"></img>
 
 		</body>
 	
