--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   					<div class="flex-container">
     						<input type="checkbox" class="Claro-Escuro" id="cee" />
       							<label for="cee" class="toggle-label">
-      								<img src="lampada.png" alt="Lâmpada" class="lampada-img">
+      								<img src="sol.png" alt="Lâmpada" class="lampada-img">
       							</label>
   						</div>
   				<ul class="nav-list">
