--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p>Resíduos inorgânicos: não sofrem biodegradação.Resíduos orgânicos com dificilmente biodegradáveis: degradação por via biológica é quase nula ou desprezível.</p> 
                                 <br>
 				<p>O que temos em mente em relação a resíduos sólidos, ou comumente chamado de lixo, são materiais que descartamos no nosso dia a dia e que são levados pelo caminhão de lixo. Além de haver resíduos residenciais, possui-se classificações de origem destes resíduos. Esses são: resíduos industriais, construção civil, serviços de saúde entre outros.</p>
-				<div><img src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg" height="285" width="500"></img></div>
+				<div class="img-conceito"><img src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg" height="285" width="500"></img></div>
 			
 			</div>
 
