--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</header>
 		
 		<body>
-		
+	    <script src="script.js"></script>
             <div class="subtitulo">
 				
 				<b>O que são resíduos sólidos</b>
