--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			
 			<nav>
   					<div class="flex-container">
-    						<input type="checkbox" class="Claro-Escuro" id="cee" />
+    						<input type="checkbox" class="dia-noite-img" id="cee" />
       							<label for="cee" class="toggle-label">
       								<img src="sol.png" alt="Lâmpada" class="lampada-img" height="64" width="64">
       							</label>
