--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<img class="conceito-imgs" src="https://jovempanbauru.com.br/uploads/2080/noticias/2020/agosto/18/residuos.jpg" height="285" width="500"></img>
 				
 			</div></div>
-			<div class="colum1">	<div class="subtitulo">
+			<div class="colum1">	<div class="subtitulo2">
 				
 				<b>O que são resíduos sólidos</b>
 
