--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div></div>
 			<div class="colum2">	<div class="subtitulo2">
 				
-				<b>O que são resíduos sólidos</b>
+				<b>Quais impactos eles causam no meio ambiente</b>
 
 			</div>
 			
