--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   						</div>
   				<ul class="nav-list">
 					<li><a></a>O que são residuos sólidos</li>
+					<li><a></a>Quais impactos eles causam no meio ambiente</li>
    					 
  			 </ul>
 		</nav>
