--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   						</div>
   				<ul class="nav-list">
 					<li><a></a>O que são residuos sólidos</li>
-					<li><a></a>Quais impactos eles causam no meio ambiente</li>
+					<li><a></a>Impactos no meio ambiente</li>
    					 
  			 </ul>
 		</nav>
@@ -50,7 +50,7 @@
 			</div></div>
 			<div class="colum2">	<div class="subtitulo2">
 				
-				<b>Quais impactos eles causam no meio ambiente</b>
+				<b>Impactos no meio ambiente</b>
 
 			</div>
 			
