--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<li><a></a>O que são residuos sólidos</li>
 					<li><a></a>Impactos no meio ambiente</li>
 					<li><a></a>Destino correto dos resíduos</li>
-					<li><a></a>Maneiras de a população reduzir danos ambientais</li>
+					<li><a></a>População e o meio ambiente</li>
 					<li><a></a>Ações de minimizar e reciclar resíduos</li>
    					 
  			 </ul>
@@ -90,7 +90,7 @@
 			
 			<div class="colum2">	<div class="subtitulo2">
 				
-				<b>Maneiras de a população reduzir danos ambientais</b>
+				<b>População e o meio ambiente</b>
 
 			</div>
 			
