--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<li><a></a>Impactos no meio ambiente</li>
 					<li><a></a>Destino correto dos resíduos</li>
 					<li><a></a>População e o meio ambiente</li>
-					<li><a></a>Ações de minimizar e reciclar resíduos</li>
+					<li><a></a>Como minimizar e reciclar resíduos</li>
    					 
  			 </ul>
 		</nav>
@@ -109,7 +109,7 @@
 
 			<div class="colum1">	<div class="subtitulo">
 				
-				<b>Ações de minimizar e reciclar resíduos</b>
+				<b>Como minimizar e reciclar resíduos</b>
 
 			</div>
 			
