--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
 				<div>Reaproveite as embalagens para armazenamento: A reutilização de embalagens ou potes, como por exemplo potes de vidro da geléia. Essa reutilização é uma grande vertente para a economia circular, esse modelo preza pela produção sustentável de bens e serviços.</div>
 				
 				</div><img class="conceito-imgs" src="https://storage.googleapis.com/adm-portal.appspot.com/_assets/modules/noticias/noticia_127649.jpg" height="285" width="500"></div></div>
-			
-				
+			<div class="rodape">
+				<div class="nome">
+				João Henrique de Sousa da Silva<br>
+				Luan Vinícius do Nascimento Alves<br>
+				Lucas Santos de Souza<br>
+				Rafael Maciel Saraiva<br>
+				Roger Felipe Martins Lustoza<br>
 
-			
 
 		</body>
 	
