Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 			
 			<div class="conceito">
-			<div class="text-conceito"><div>É importante entender que a forma como consumimos é capaz de impactar o planeja. Repense sobre o que você compra e de quem compra, mantendo sempre um olhar atento com relação às embalagens, que normalmente acabam indo para o lixo.</div>
+			<div class="text-conceito"><div>É importante entender que a forma como consumimos é capaz de impactar o planeta. Repense sobre o que você compra e de quem compra, mantendo sempre um olhar atento com relação às embalagens, que normalmente acabam indo para o lixo.</div>
 				<br>
 				<div>Evite embalagens de plástico e isopor: Evitar a utilização de sacolas plásticas e isopor, pois, para que ocorra a degradação da sacola plástica, leva cerca de 500 anos. Já o isopor tem um tempo indeterminado. Para um mundo melhor é necessário conscientizar a utilização de sacolas biodegradáveis, que cada pessoa leve para mercados, comércios, dentre outros.</div> 
                                 <br>
